--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!-- Add your name below -->
-  <title>Nagomi McDaniel</title>
+  <title>Michael Naval</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -15,7 +15,7 @@
   <div class="container">
     <!-- Image and name container. Put your replacement photo—which you should crop to be square—in the images folder, then change the source attribute to images/yourportraitfilename.jpg. This path says, "Look in the images folder for yourportraitfilename.jpg." Be sure to change the alt text, too. -->
     <div class="image-container">
-      <img src="images/portrait.jpg" alt="Photo by Art Hauntington">
+      <img src="images/michael-profile-picture.png" alt="Photo by Michael">
     </div>
     <div class="intro">
       I'm <span class="name"><strong>Michael Naval</strong></span>, a senior Electrical Engineering Student and Future Protection & Control Engineer
@@ -64,7 +64,7 @@
 
   </div>
   <div class="footer">
-    <p>© Michael Naval, 2024. Based on a design by <a
+    <p>© Michael Naval, 2025. Based on a design by <a
         href="https://www.w3schools.com/howto/howto_website_create_linktree.asp" target="_blank">w3schools</a>.
     </p>
   </div>
