--- a/index.html
+++ b/index.html
@@ -28,9 +28,12 @@
       <div class="button toggle">Blog post</div>
       <div class="slidedown">
         <div class="description">
-          <h2>Blog post title</h2>
-          <p>Here, add a short but appealing description of your blog post.</p>
-          <a href="#" class="external-link" target="_blank">Read</a>
+          <h2>Phasor Measurement Units: How We Keep the Lights On</h2>
+          <p>This blog post represents my Senior Design Project that is being completed in Fall 2025.
+             It discusses the purposes of the project and targets engineers working in the power grid industry.
+          </p>
+          <a href="https://medium.com/@michaelnaval/phasor-measurement-units-how-we-keep-the-lights-on-35eedf4079ba" 
+             class="external-link" target="_blank">Read</a>
         </div>
       </div>
 
@@ -59,7 +62,7 @@
     </div>
 
     <div class="links-container">
-      <a href="https://drive.google.com" class="button" target="_blank">Resume</a>
+      <a href="docs/Michael Naval - Resume Word.pdf" class="button" target="_blank">Resume</a>
     </div>
 
   </div>
