--- a/Website Setup/linktree-ver-1/index.html
+++ b/Website Setup/linktree-ver-1/index.html
@@ -28,12 +28,11 @@
       <div class="button toggle">Blog post</div>
       <div class="slidedown">
         <div class="description">
-          <h2>Phasor Measurement Units: How We Keep the Lights On</h2>
+          <h2>Blog post title</h2>
           <p>This blog post represents my Senior Design Project that is being completed in Fall 2025.
-             It discusses the purposes of the project and targets engineers working in the power grid industry.
+             It discusses about the purposes of the project and targets engineers working in the power grid industry.
           </p>
-          <a href="https://medium.com/@michaelnaval/phasor-measurement-units-how-we-keep-the-lights-on-35eedf4079ba" 
-             class="external-link" target="_blank">Read</a>
+          <a href="#" class="external-link" target="_blank">Read</a>
         </div>
       </div>
 
@@ -42,18 +41,16 @@
         <div class="description">
           <h2>Video title</h2>
           <p>Add a short but appealing description of your video.</p>
-          <a href="#" class="external-link" target="_blank">Watch</a>
+          <a href="https://drive.google.com" class="button" target="_blank">Resume</a>
         </div>
       </div>
 
       <div class="button toggle">Podcast</div>
       <div class="slidedown">
         <div class="description">
-          <h2>Doom Scrolling and Productivity</h2>
-          <p>This podcast is a conversation about how doom scrolling affects our mental focus and motivation.
-             and discusses on the strategies used to solve this.
-          </p>
-          <a href="https://soundcloud.com/michaeln-707941706/doom-scrolling-and-poductivity" class="external-link" target="_blank">Listen on SoundCloud</a>
+          <h2>Podcast title</h2>
+          <p>Add a short but appealing description of your podcast</p>
+          <a href="#" class="external-link" target="_blank">Listen</a>
         </div>
       </div>
     </div>
@@ -64,7 +61,7 @@
     </div>
 
     <div class="links-container">
-      <a href="docs/Michael Naval - Resume Word.pdf" class="button" target="_blank">Resume</a>
+      <a href="https://drive.google.com" class="button" target="_blank">Resume</a>
     </div>
 
   </div>
