--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
         <div class="description">
           <h2>Doom Scrolling and Productivity</h2>
           <p>This podcast is a conversation about how doom scrolling affects our mental focus and motivation.
-             and discusses on the strategies used to solve this.
+             It discusses on the strategies used to solve this issue.
           </p>
-          <a href="https://soundcloud.com/michaeln-707941706/doom-scrolling-and-poductivity" class="external-link" target="_blank">Listen on SoundCloud</a>
+          <a href="https://soundcloud.com/michaeln-707941706/doom-scrolling-and-poductivity" class="external-link" target="_blank">Listen</a>
         </div>
       </div>
     </div>
