--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
       <div class="button toggle">Video</div>
       <div class="slidedown">
         <div class="description">
-          <h2>Video title</h2>
-          <p>Add a short but appealing description of your video.</p>
+          <h2>Video Project title Coming Soon!</h2>
+          <p>This project will talk about media and storytelling. More details will show soon</p>
           <a href="#" class="external-link" target="_blank">Watch</a>
         </div>
       </div>
