--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
       <div class="button toggle">Podcast</div>
       <div class="slidedown">
         <div class="description">
-          <h2>Doom Scrolling and Productivity</h2>
-          <p>This podcast is a conversation about how doom scrolling affects our mental focus and motivation.
+          <h2>Doomscrolling and Productivity</h2>
+          <p>This podcast is a conversation about how doomscrolling affects our mental focus and motivation.
              It discusses on the strategies used to solve this issue.
           </p>
           <a href="https://soundcloud.com/michaeln-707941706/doom-scrolling-and-poductivity" class="external-link" target="_blank">Listen</a>
