--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
   <!-- Add your name below -->
   <title>Michael Naval</title>
   <link rel="stylesheet" href="css/style.css">
+
+  <!-- Favicon.io Icons -->
+  <link rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+  <link rel="manifest" href="site.webmanifest">
+
 </head>
 
 <body class="main-text-color">
@@ -25,8 +35,8 @@
     </div>
     <!-- Replace the # inside of the href="#" with your links. -->
     <div class="links-container">
-      <div class="button toggle">Blog post</div>
-      <div class="slidedown">
+    <div class="button toggle"><i class="fa-brands fa-medium"></i> Blog post</div>      
+    <div class="slidedown">
         <div class="description">
           <h2>Phasor Measurement Units: How We Keep the Lights On</h2>
           <p>This blog post represents my Senior Design Project that is being completed in Fall 2025.
@@ -37,7 +47,7 @@
         </div>
       </div>
 
-      <div class="button toggle">Video</div>
+      <div class="button toggle"><i class="fab fa-youtube"></i> Video</div>
       <div class="slidedown">
         <div class="description">
           <h2>Video Project title Coming Soon!</h2>
@@ -46,7 +56,7 @@
         </div>
       </div>
 
-      <div class="button toggle">Podcast</div>
+      <div class="button toggle"><i class="fab fa-soundcloud"></i> Podcast</div>
       <div class="slidedown">
         <div class="description">
           <h2>Doomscrolling and Productivity</h2>
@@ -64,7 +74,13 @@
     </div>
 
     <div class="links-container">
-      <a href="docs/Michael Naval - Resume Word.pdf" class="button" target="_blank">Resume</a>
+      <a href="docs/Michael Naval - Resume Word.pdf" class="button" target="_blank">
+      <i class="fab fa-google-drive"></i> Resume
+      </a>
+
+      <a href="https://www.linkedin.com/in/michael-naval-7695a1211" class="button" target="_blank">
+      <i class="fa-brands fa-linkedin"></i> LinkedIn
+      </a>
     </div>
 
   </div>
