--- a/index.html
+++ b/index.html
@@ -72,9 +72,8 @@
       <div class="button toggle"><i class="fab fa-youtube"></i> Video</div>
       <div class="slidedown">
         <div class="description">
-          <h2>Video Project title Coming Soon!</h2>
-          <p>This project will talk about media and storytelling. More details will show soon</p>
-
+          <h2>Virtual Phasor Measurement Unit (PMU) User Interface</h2>
+          <p>This video showcases my senior design project of the created Virtual PMU and it explains its importance for engineers analyzing power system signals</p>
 
           <!-- YouTube Embed -->
           <a href="https://www.youtube.com/watch?v=M3gIozQiHOs" 
